T-7237 theme/totara: fixed overlap bug in ie6/7 on the admin menu block

--- a/theme/standard-totara/styles_ie6.css
+++ b/theme/standard-totara/styles_ie6.css
@@ -65,3 +65,8 @@ div.totara-dialog .selected {
 #login-index .loginbox .loginform .form-input {
     position:relative;
 }
+
+/* Admin block */
+#left-column .block_admin_tree {
+    position:relative;
+}
