--- a/theme/standard-totara/styles_ie7.css
+++ b/theme/standard-totara/styles_ie7.css
@@ -18,3 +18,8 @@ input, select, button {
 #login-index .loginbox .loginform .form-input {
     position:relative;
 }
+
+/* Admin block */
+#left-column .block_admin_tree {
+    position:relative;
+}
